[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "thehive4py"
description = "Python client for TheHive5"
version = "2.0.1"
requires-python = ">=3.9"
dependencies = ["requests~=2.27", "typing_extensions==4.*"]
readme = "README.md"
keywords = ["thehive5", "api", "client"]
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
authors = [{ name = "Szabolcs Antal", email = "antalszabolcs01@gmail.com" }]

[project.optional-dependencies]
audit = ["bandit", "pip-audit"]
build = ["build", "twine"]
docs = ["mkdocs", "mkdocs-material", "mkdocstrings-python", "mike"]
lint = ["mypy", "ruff", "pre-commit"]
test = ["pytest", "pytest-cov"]
dev = ["thehive4py[audit, lint, test, build, docs]", "nox"]

[tool.setuptools.packages.find]
include = ["thehive4py*"]

[tool.setuptools.package-data]
thehive4py = ["py.typed"]

[tool.coverage.run]
omit = ["tests/*", "thehive4py/types/*"]

[tool.ruff.lint.per-file-ignores]
"thehive4py/__init__.py" = ["F401"]
"thehive4py/endpoints/__init__.py" = ["F401"]
"thehive4py/query/__init__.py" = ["F401"]
